fix(InputView): 예외 처리 함수 구현 방법 수정 1. inputWinNumbers 함수의 반환 값을 Lotto 클래스에서 List로 변경 2. checkDuplicateNumber 함수에서 중복 찾는 방법 변경 3. checkSixNumbers 함수에서 숫자가 6개인지 판단하는 방법 변경